AG-10044 - Fix RHS nav scrollbar issue

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SideNavigation.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SideNavigation.module.scss
@@ -27,6 +27,7 @@
             margin-right: calc(var(--layout-horizontal-margins) * -1); // Improve scrollbar position
             padding-top: $spacing-size-8 + 2px; // Tweak top docs page vertical alignment (+ 2px)
             padding-right: $spacing-size-8;
+            padding-bottom: $spacing-size-1;
             position: sticky;
             top: var(--layout-site-header-height);
             max-height: calc(100vh - var(--layout-site-header-height));
@@ -115,10 +116,7 @@
         left: 0;
         opacity: 0;
         z-index: -1;
-        transition:
-            color 0.33s ease-in-out,
-            border-color 0.33s ease-in-out,
-            background-color 0.33s ease-in-out;
+        transition: color 0.33s ease-in-out, border-color 0.33s ease-in-out, background-color 0.33s ease-in-out;
     }
 
     &:hover::before {
